# sphinxcontrib-drawio

./: .gitignore  CHANGES.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  azure-pipelines.yml  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: workflow.yml
sphinxcontrib/: __init__.py  drawio.py
sphinxcontrib/drawio/: __init__.py  deprecated.py
tests/: conftest.py  test_caching.py  test_compat.py  test_options.py  test_page_index.py  test_pdf.py  test_root.py  test_simple.py  test_update.py
tests/roots/test-align/: index.rst
tests/roots/test-alt/: index.rst
tests/roots/test-bad-config/: conf.py
tests/roots/test-bad-config2/: conf.py
tests/roots/test-figure/: conf.py  index.rst
tests/roots/test-image/: circle.drawio
tests/roots/test-imgconverter/: conf.py
tests/roots/test-layer-not-exist/: index.rst  layers.drawio
tests/roots/test-layer-selection/: index.rst
tests/roots/test-outdir/: conf.py  index.rst
tests/roots/test-outdir-relative/: conf.py
tests/roots/test-page-index/: index.rst
tests/roots/test-page-index-out-of-range/: index.rst  pages.drawio
tests/roots/test-page-name/: index.rst  pages.drawio
tests/roots/test-page-name-and-page-index/: index.rst
tests/roots/test-page-name-not-exist/: index.rst
tests/roots/test-reference/: index.rst
tests/roots/test-root/: .gitignore  index.rst
tests/roots/test-scale/: conf.py  index.rst
tests/roots/test-simple/: box.drawio  conf.py
(+4 files in other folders)
