[metadata]
name = sphinxcontrib-drawio
version = attr: sphinxcontrib.drawio.__version__
author = Modelmat
author_email = modelmat@outlook.com.au
description = Sphinx Extension to include draw.io files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Modelmat/sphinxcontrib-drawio
license = MIT
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Sphinx :: Extension

[options]
packages = sphinxcontrib.drawio
python_requires = >=3.6
